--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "Alina",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
@@ -25,7 +25,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.4.0",
     "express-winston": "^4.2.0",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "validator": "^13.7.0",
