--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.17.2",
+    "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
     "express-winston": "^4.2.0",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "limiter": "^2.1.0",
     "mongoose": "^6.3.1",
     "validator": "^13.7.0",
     "winston": "^3.8.0"
